--- a/pom.xml
+++ b/pom.xml
@@ -557,19 +557,20 @@
         <primefaces.version>3.2</primefaces.version>
         
         <!-- Plugin versions -->
-        <plugin.compiler.version>3.1</plugin.compiler.version>
-        <plugin.wagon-ssh.version>2.1</plugin.wagon-ssh.version>
-        <plugin.bundlor.version>1.0.0.RELEASE</plugin.bundlor.version>
-        <plugin.par.version>1.0.0.RELEASE</plugin.par.version>
-        <plugin.lifecycle-mapping.version>1.0.0</plugin.lifecycle-mapping.version>
         <plugin.assembly.version>2.4</plugin.assembly.version>
+        <plugin.bundlor.version>1.0.0.RELEASE</plugin.bundlor.version>
         <plugin.clean.version>2.5</plugin.clean.version>
+        <plugin.compiler.version>3.1</plugin.compiler.version>
         <plugin.install.version>2.4</plugin.install.version>
         <plugin.jar.version>2.4</plugin.jar.version>
-        <plugin.surefire.version>2.15</plugin.surefire.version>
         <plugin.javadoc.version>2.9.1</plugin.javadoc.version>
         <plugin.jxr.version>2.3</plugin.jxr.version>
+        <plugin.lifecycle-mapping.version>1.0.0</plugin.lifecycle-mapping.version>
+        <plugin.par.version>1.0.0.RELEASE</plugin.par.version>
+        <plugin.surefire.version>2.15</plugin.surefire.version>
         <plugin.taglist.version>2.4</plugin.taglist.version>
+        <plugin.wagon-ssh.version>2.1</plugin.wagon-ssh.version>
+        <plugin.war.version>2.4</plugin.war.version>
         
         <!-- OSGi header versions -->
         <osgi.apache.commons.lang.version>${apache.commons.lang.version}</osgi.apache.commons.lang.version>
@@ -725,6 +726,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${plugin.jar.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${plugin.war.version}</version>
                 </plugin>
 
                 <plugin>
