--- a/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
@@ -96,7 +96,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <profiles>
         <profile>
             <id>noOSGI</id>
@@ -249,6 +249,12 @@
                 <dependency>
                     <groupId>org.springframework.osgi</groupId>
                     <artifactId>org.springframework.osgi.core</artifactId>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>org.springframework.aop</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <!-- OSGi libraries needed to validate against schema file -->
                 <dependency>
