added property jdbc.showSql IN PROGRESS - issue TMS-3: Specify the OSIP message handshake between layer N <-> N-1 <->N-2 https://openwms.atlassian.net/browse/TMS-3

--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -28,6 +28,7 @@
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
 jdbc.persistenceUnit=OpenWMS-test-durable
+jdbc.showSql=true
 
 # PostgreSQL settings
 jdbc.driverClassName=org.postgresql.Driver
