--- a/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
@@ -34,6 +34,7 @@ jdbc.database=POSTGRESQL
 jdbc.properties=hibernate.connection.compatible=7.1
 #jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.persistenceUnit=OpenWMS-test-durable
+jdbc.showSql=true
 
 # System user credentials
 system.user=openwms
