--- a/org.openwms.tms/pom.xml
+++ b/org.openwms.tms/pom.xml
@@ -37,6 +37,7 @@
         <moduleDir>../..</moduleDir>
         <core.version>0.2-SNAPSHOT</core.version>
         <common.version>0.2-SNAPSHOT</common.version>
+        <module.version>0.2-SNAPSHOT</module.version>
         <bundle.version>0.2.SNAPSHOT</bundle.version>
     </properties>
 
@@ -92,43 +93,43 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.util</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.domain</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.domain.as</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
                 <type>swc</type>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.integration</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.integration.jpa</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.service.api</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.service.spring</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.flex.module</artifactId>
-                <version>${project.version}</version>
+                <version>${module.version}</version>
                 <type>swf</type>
             </dependency>
         </dependencies>
